--- a/public/about.html
+++ b/public/about.html
@@ -19,7 +19,7 @@
               <div class="row">
                 <div class="w-full px-16 flex flex-wrap items-center justify-center gap-3 sm:gap-0">
                   <h3 class=" px-4 font-bold text-xl">We are hiring!</h3>
-                  <a href="javascript:;" class=" px-4 text-base text-gray-900">Learn more <span><i class="fa-solid fa-caret-right"></i></span></a>
+                  <a href="./careers02.html" class=" px-4 text-base text-gray-900">Learn more <span><i class="fa-solid fa-caret-right"></i></span></a>
                 </div>
                 <span class="cross absolute top-1/4 right-4 cursor-pointer"><i class="fa-solid fa-xl fa-square-xmark"></i></span>
               </div>
@@ -39,7 +39,7 @@
                 <li class=" py-3"><a href="./about.html" class=" relative text-logic-pest">About us</a></li>
                 <!-- <li class=" py-3"><a href="javascript:;" class=" relative text-black hover:text-logic-pest">Pricing</a></li> -->
                 <li class=" py-3"><a href="./contacts.html" class=" relative text-black hover:text-logic-pest">Contact us</a></li>
-                <!-- <li class=" py-3"><a href="javascript:;" class=" relative text-black hover:text-logic-pest">Career</a></li> -->
+                <li class=" py-3"><a href="./careers.html" class=" relative text-black hover:text-logic-pest">Careers</a></li>
                 <!-- <li class=" py-3"><a href="javascript:;" class=" relative text-black hover:text-logic-pest">Blog</a></li> -->
               </ul>
             </div>
@@ -62,7 +62,7 @@
               <li class=""><a href="./about.html" class=" relative flex p-4">About us</a></li>
               <!-- <li class=""><a href="javascript:;" class=" relative flex p-4">Pricing</a></li> -->
               <li class=""><a href="./contacts.html" class=" relative flex p-4">Contact us</a></li>
-              <!-- <li class=""><a href="javascript:;" class=" relative flex p-4">Career</a></li> -->
+              <li class=""><a href="./careers.html" class=" relative flex p-4">Careers</a></li>
               <!-- <li class=""><a href="javascript:;" class=" relative flex p-4">Blog</a></li> -->
             </ul>
           </div>
