--- a/public/careers.html
+++ b/public/careers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts</title>
+    <title>Careers</title>
     <link rel="stylesheet" href="./tailwind.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
@@ -12,16 +12,16 @@
     <header class=" sticky top-0 z-50">
         <!-- ===================head-1==================== -->
         <section class="place bg-color-1">
-          <div class=" relative container max-w-screen-xl mx-auto px-4 py-2">
-            <div class="row">
-              <div class="w-full px-16 flex flex-wrap items-center justify-center gap-3 sm:gap-0">
-                <h3 class=" px-4 font-bold text-xl">We are hiring!</h3>
-                <a href="./careers02.html" class=" px-4 text-base text-gray-900">Learn more <span><i class="fa-solid fa-caret-right"></i></span></a>
+            <div class=" relative container max-w-screen-xl mx-auto px-4 py-2">
+              <div class="row">
+                <div class="w-full px-16 flex flex-wrap items-center justify-center gap-3 sm:gap-0">
+                  <h3 class=" px-4 font-bold text-xl">We are hiring!</h3>
+                  <a href="./careers02.html" class=" px-4 text-base text-gray-900">Learn more <span><i class="fa-solid fa-caret-right"></i></span></a>
+                </div>
+                <span class="cross absolute top-1/4 right-4 cursor-pointer"><i class="fa-solid fa-xl fa-square-xmark"></i></span>
               </div>
-              <span class="cross absolute top-1/4 right-4 cursor-pointer"><i class="fa-solid fa-xl fa-square-xmark"></i></span>
             </div>
-          </div>
-        </section>
+          </section>
         <!-- ===================head-1 End==================== -->
         <!-- ================Navbar====================== -->
       <nav class=" bg-color-2 shadow-lg">
@@ -35,8 +35,8 @@
                 <li class=" py-3"><a href="./index.html" class=" relative text-black hover:text-logic-pest">Home</a></li>
                 <li class=" py-3"><a href="./about.html" class=" relative text-black hover:text-logic-pest">About us</a></li>
                 <!-- <li class=" py-3"><a href="javascript:;" class=" relative text-black hover:text-logic-pest">Pricing</a></li> -->
-                <li class=" py-3"><a href="./contacts.html" class=" relative text-logic-pest">Contact us</a></li>
-                <li class=" py-3"><a href="./careers.html" class=" relative text-black hover:text-logic-pest">Careers</a></li>
+                <li class=" py-3"><a href="./contacts.html" class=" relative text-black hover:text-logic-pest">Contact us</a></li>
+                <li class=" py-3"><a href="./careers.html" class=" relative text-logic-pest">Careers</a></li>
                 <!-- <li class=" py-3"><a href="javascript:;" class=" relative text-black hover:text-logic-pest">Blog</a></li> -->
               </ul>
             </div>
@@ -67,96 +67,75 @@
         </div>
       </nav>
       <!-- ================Navbar End====================== -->
-    </header>
-    <!-- =====================Hero Section================== -->
-    <section class="">
-      <div class="container max-w-screen-xl mx-auto px-4 py-10">
-        <div class="row items-center">
-          <div class=" w-full md:w-6/12 px-4 space-y-4 md:space-y-8">
-            <h2 class=" md:leading-tight title font-bold text-2xl lg:text-5xl">Contact <span class="text-gradient">Us</span></h2>
-            <p class=" text-base text-gray-700 pb-8 lg:pb-0">We have a professional and excellent team, totally focused on your business. Need some clarification? Don't hesitate to contact us, let's talk a little bit and discuss your ideas, without commitment.</p>
-          </div>
-          <div class=" w-full md:w-6/12 px-4">
-              <div class="flex justify-center items-center">
-                  <img src="../image/techSupport.svg" width="80%" alt="support">
+      </header>
+    <!-- =======================Join the team start==================== -->
+    <section class="custom-bg-1">
+      <div class="container mx-auto px-4">
+          <div class="row">
+              <div class="w-full flex justify-center items-center ">
+                  <div class="text-center text-white my-10 md:my-16 space-y-6 md:space-y-8">
+                      <h2 class="font-bold text-2xl md:text-4xl py-4"><span class="text-gradient">Join</span> the team</h2>
+                      <p class=" text-lg md:text-2xl">Help us build the future of IT services in the world.</p>
+                      <div class="py-4">
+                        <a class="px-8 py-2 bg-white text-color-1 capitalize rounded-md font-semibold hover:text-white hover:bg-logic-pest " href="./careers02.html">View openings</a>
+                      </div>
+                  </div>
               </div>
           </div>
-        </div>
       </div>
     </section>
-    <!-- =====================Hero Section End================== -->
-    <!-- ===========================Form Section Start============================ -->
-    <section class=" py-10">
-        <div class="container mx-auto max-w-screen-xl px-4">
-            <div class="row">
-                <div class="lg:w-2/3 md:1/2 w-full px-4 space-y-4 lg:space-y-6">
-                    <div class="flex flex-wrap sm:justify-start justify-center">
-                        <p class="top-content uppercase text-gradient font-bold text-base lg:text-lg">Send a message</p>
-                    </div>
-                    <h1 class="md:leading-tight title font-bold text-2xl lg:text-4xl">Get in Touch</h1>
-                    <p class=" text-base text-gray-700">We will respond to your message as soon as possible.</p>
-                    <div class="w-full py-4">
-                        <form action="" id="contact_form" class="ct_form">
-                            <div class="grid sm:grid-cols-2 grid-cols-1 gap-6">
-                                <div class="">
-                                    <input type="text" name="name" class="rounded bg-blue-50 px-4 py-4 w-full border border-blue-50 focus:border-blue-200 focus:outline-none" placeholder="Name">
-                                </div>
-                                <div class="">
-                                    <input type="email" name="email" class="rounded bg-blue-50 px-4 py-4 w-full border border-blue-50 focus:border-blue-200 focus:outline-none" placeholder="Email">
-                                </div>
-                                <div class="">
-                                    <input type="text" name="phone" class="rounded bg-blue-50 px-4 py-4 w-full border border-blue-50 focus:border-blue-200 focus:outline-none" placeholder="Phone">
-                                </div>
-                                <div class="">
-                                    <input type="text" name="subject" class="rounded bg-blue-50 px-4 py-4 w-full border border-blue-50 focus:border-blue-200 focus:outline-none" placeholder="Subject">
-                                </div>
-                            </div>
-                            <div class="col-12 mt-6">
-                                <textarea rows="6" name="message" class="rounded bg-blue-50 px-4 py-4 w-full border border-blue-50 focus:border-blue-200 focus:outline-none" placeholder="Message"></textarea>
-                            </div>
-                            <button class="py-4 pl-8 pr-2 rounded mt-10 sm:w-52 w-full bg-blue-primary font-bold arrow items-center">
-                                <a class="mr-6 md:text-lg text-md uppercase leading-8" herf="javascript:;">Submit</a>                            
-                            </button>
-                        </form>
-                    </div>
-                </div>                                   
-                <div class="lg:w-1/3 md:1/2 w-full px-4">
-                    <div class="contacts">
-                        <h4 class=" md:leading-tight title font-bold text-2xl lg:text-4xl">Logic Line Info</h4>
-                        <p class="mt-6 text-gray-700 text-base font-normal">If you would like to find out more about how we can help you, please give us a call or drop us an email. </p>
-                        <p class="mt-4 text-gray-700 text-base font-normal"> We welcome your ideas and suggestions about this website and/or any other issues that you wish to raise. </p>
-                        <ul class="mt-12">
-                            <li class="flex items-center mt-8">
-                                <a href="javascript:;" class="bg-blue-100 h-10 w-10 text-center rounded-full">
-                                    <i class="fa-solid fa-phone text-2xl text-color-1 mt-2"></i>                                        
-                                </a>
-                                <p class="ml-4 font-medium text-color-1 -mt-2.5 text-xl">01955-786556</p>
-                            </li>
-                            <li class="flex items-center mt-8">
-                                <a href="javascript:;" class="bg-blue-100 h-10 w-10 text-center rounded-full">
-                                    <i class="fa-solid text-2xl text-color-1 mt-2 fa-envelope"></i>                                        
-                                </a>
-                                <p class="ml-4 font-medium text-color-1 -mt-2.5 text-xl">contact@logicline.tech</p>
-                            </li>
-                            <li class="flex items-center mt-8">
-                                <div>
-                                    <a href="javascript:;" class="bg-blue-100 h-10 w-10 text-center rounded-full inline-block">
-                                        <i class="fa-solid text-2xl text-color-1 mt-2 fa-location-dot"></i>                                        
-                                    </a>
-                                </div>
-                                <p class="ml-4 font-medium text-color-1 -mt-2.5 text-xl">6th Floor, South Zone Hospital <br> 33 Outer Bypass Rd, Khulna 9100</p>
-                            </li>
-                            <li class=" mt-12 bg-blue-100 text-center w-full hover:bg-blue-200">
-                                <a target="_blank" href="https://www.google.com/maps/place/South+Zone+private+Hospital/@22.8332677,89.5333983,18.2z/data=!4m6!3m5!1s0x39ff9abb701e9ce7:0x258b13e2ccc970c1!4b1!8m2!3d22.8323564!4d89.5353803" class="text-color-1 font-semibold block  p-4">VIEW MAP</a>
-                            </li>
-                        </ul>
-                    </div>                            
-                </div>
-            </div>
-        </div>
+    <!-- =======================Join the team end==================== -->
+    <!-- =======================LogicLine Start==================== -->
+    <section class=" py-16">
+      <div class="container max-w-screen-xl mx-auto px-4">
+          <div class="row">
+              <div class="w-full px-4 text-center space-y-4 md:space-y-8">
+                  <h2 class=" font-bold text-2xl md:text-4xl text-black">Learn more about <span class="text-gradient">Logic Line</span></h2>
+                  <p class=" text-base sm:text-lg text-black pb-16">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              </div>
+              <div class=" w-full md:w-4/12 px-4 pb-4 md:pb-0">
+                  <div class=" space-y-4 bg-color-3 p-8 h-full flex flex-col justify-between">
+                      <div class=" w-12 h-12 rounded-sm bg-color-2 flex justify-center items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8 text-color-1 font-bold">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 00.75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 00-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0112 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 01-.673-.38m0 0A2.18 2.18 0 013 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 013.413-.387m7.5 0V5.25A2.25 2.25 0 0013.5 3h-3a2.25 2.25 0 00-2.25 2.25v.894m7.5 0a48.667 48.667 0 00-7.5 0M12 12.75h.008v.008H12v-.008z" />
+                        </svg>                        
+                      </div>
+                      <h3 class=" text-white font-bold text-xl">Career Opportunities</h3>
+                      <p class=" text-white">Build the future of IT services with us in SEA.</p>
+                      <div class="py-4">
+                          <a href="./careers02.html" class=" text-white">Explore Careers <span><i class="fa-solid fa-caret-right"></i></span></a>
+                      </div>
+                  </div>
+              </div>
+              <div class=" w-full md:w-4/12 px-4 pb-4 md:pb-0">
+                  <div class=" space-y-4 bg-color-3 p-8 h-full flex flex-col justify-between">
+                      <div class=" w-12 h-12 pt-3 rounded-sm bg-color-2">
+                          <i class=" p-2 fa-solid fa-2xl fa-circle-user text-color-1"></i>
+                      </div>
+                      <h3 class=" text-white font-bold text-xl">Our Blog </h3>
+                      <p class=" text-white">Read about the latest industry insights, Open Finance and Fintech trends. </p>
+                      <div class="py-4">
+                          <a href="javascript:;" class=" text-white">Read our Blog <span><i class="fa-solid fa-caret-right"></i></span></a>
+                      </div>
+                  </div>
+              </div>
+              <div class=" w-full md:w-4/12 px-4">
+                  <div class=" space-y-4 bg-color-3 p-8 h-full flex flex-col justify-between">
+                      <div class=" w-12 h-12 pt-3 rounded-sm bg-color-2">
+                          <i class=" p-2 fa-regular fa-2xl fa-file ml-1 text-color-1"></i>
+                      </div>
+                      <h3 class=" text-white font-bold text-xl">Documentation </h3>
+                      <p class=" text-white">Check out our API documentation for our products and services.</p>
+                      <div class="py-4 -mr-2">
+                          <a href="javascript:;" class=" text-white">View Documentation <span><i class="fa-solid fa-caret-right"></i></span></a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
     </section>
-    <!-- ===========================Form Section End============================ -->
-    <!-- footer section starts -->
+    <!-- =======================LogicLine end==================== -->
+      <!-- footer section starts -->
 <div class=" py-10  bg-color-2">
     <div class="container  max-w-screen-xl mx-auto px-4 py-4">
         <div class="row">
@@ -240,6 +219,7 @@
     </div>
     </div>
     <!-- footer section ends -->
+
     <script src="../js/index.js"></script>
 </body>
 </html>
