--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
           <div class="row">
             <div class="w-full px-16 flex flex-wrap items-center justify-center gap-3 sm:gap-0">
               <h3 class=" px-4 font-bold text-xl">We are hiring!</h3>
-              <a href="javascript:;" class=" px-4 text-base text-gray-900">Learn more <span><i class="fa-solid fa-caret-right"></i></span></a>
+              <a href="./careers02.html" class=" px-4 text-base text-gray-900">Learn more <span><i class="fa-solid fa-caret-right"></i></span></a>
             </div>
             <span class="cross absolute top-1/4 right-4 cursor-pointer"><i class="fa-solid fa-xl fa-square-xmark"></i></span>
           </div>
@@ -38,7 +38,7 @@
                 <li class=" py-3"><a href="./about.html" class=" relative text-black hover:text-logic-pest">About us</a></li>
                 <!-- <li class=" py-3"><a href="javascript:;" class=" relative text-black hover:text-logic-pest">Pricing</a></li> -->
                 <li class=" py-3"><a href="./contacts.html" class=" relative text-black hover:text-logic-pest">Contact us</a></li>
-                <!-- <li class=" py-3"><a href="javascript:;" class=" relative text-black hover:text-logic-pest">Career</a></li> -->
+                <li class=" py-3"><a href="./careers.html" class=" relative text-black hover:text-logic-pest">Careers</a></li>
                 <!-- <li class=" py-3"><a href="javascript:;" class=" relative text-black hover:text-logic-pest">Blog</a></li> -->
               </ul>
             </div>
@@ -61,7 +61,7 @@
               <li class=""><a href="./about.html" class=" relative flex p-4">About us</a></li>
               <!-- <li class=""><a href="javascript:;" class=" relative flex p-4">Pricing</a></li> -->
               <li class=""><a href="./contacts.html" class=" relative flex p-4">Contact us</a></li>
-              <!-- <li class=""><a href="javascript:;" class=" relative flex p-4">Career</a></li> -->
+              <li class=""><a href="./careers.html" class=" relative flex p-4">Careers</a></li>
               <!-- <li class=""><a href="javascript:;" class=" relative flex p-4">Blog</a></li> -->
             </ul>
           </div>
@@ -203,8 +203,8 @@
                         </div>
                     </div>
                 </div>
-                <div class=" w-full md:w-4/12 px-4 pb-4 md:pb-0 h-full">
-                    <div class=" space-y-4 bg-color-3 p-8">
+                <div class=" w-full md:w-4/12 px-4 pb-4 md:pb-0">
+                    <div class=" space-y-4 bg-color-3 p-8 h-full">
                         <div class=" w-12 h-12 pt-3 rounded-sm bg-color-2">
                             <i class=" p-2 fa-solid fa-2xl fa-circle-user"></i>
                         </div>
@@ -218,7 +218,7 @@
                 <div class=" w-full md:w-4/12 px-4">
                     <div class=" space-y-4 bg-color-3 p-8 h-full">
                         <div class=" w-12 h-12 pt-3 rounded-sm bg-color-2">
-                            <i class=" p-2 fa-solid fa-2xl fa-headset"></i>
+                            <i class=" p-2 fa-solid fa-2xl fa-forward"></i>
                         </div>
                         <h3 class=" text-white font-bold text-xl">Qualifies Leads</h3>
                         <p class=" text-white">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -559,7 +559,7 @@
             </h2>
             <p class="text-white py-5">We are dedicated to helping businesses to improve</br>  the experience they provide for the customers</p>
             <div class="py-4 bg-color-3">
-              <a class="px-8 py-2 bg-white text-color-1 capitalize rounded-md font-semibold hover:text-white hover:bg-logic-pest " href="">get started</a>
+              <a class="px-8 py-2 bg-white text-color-1 capitalize rounded-md font-semibold hover:text-white hover:bg-logic-pest " href="javascript:;">get started</a>
             </div>
             <div class=" -z-10 absolute h-full w-full bg-gradient -bottom-4 left-4 rounded-md">
             </div>
